--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,22 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../../../../assets/images/Asset1-4x-big.png">
 </head>
 <body>
   <app-root></app-root>
 </body>
+
+
+<!-- For Google analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-143509424-1', 'auto');  // <- add the UA-ID 
+                                         // <- remove the last line 
+</script>
+<!-- Closure -->
 </html>
